[project]
name = "browser-history"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=3.0.1",
    "matplotlib",
    "scikit-learn>=1.4",
    "jupyterlite-core>=0.7.3",
    "jupyterlite-pyodide-kernel>=0.7.0",
    "jupyter-server>=2.17.0",
]
